<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/mainTitle"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnA"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="8dp"
        android:textColor="#858585"
        android:text="@string/a"
        app:layout_constraintEnd_toStartOf="@+id/btnB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnB"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="132dp"
        android:layout_marginLeft="132dp"
        android:layout_marginTop="8dp"
        android:text="@string/b"
        android:textColor="#858585"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnC"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginTop="8dp"
        android:text="@string/c"
        android:textColor="#858585"
        app:layout_constraintEnd_toStartOf="@+id/btnD"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnB"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnD"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:text="@string/d"
        android:textColor="#858585"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnC"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnJ"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginEnd="202dp"
        android:layout_marginRight="202dp"
        android:text="@string/j"
        android:textColor="#858585"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnF" />

    <Button
        android:id="@+id/btnKosong"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        android:textColor="#858585"
        app:layout_constraintStart_toEndOf="@+id/btnO"
        app:layout_constraintTop_toBottomOf="@+id/btnL" />

    <Button
        android:id="@+id/btnO"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginEnd="124dp"
        android:layout_marginRight="124dp"
        android:text="@string/o"
        android:textColor="#858585"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnK" />

    <Button
        android:id="@+id/btnN"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:textColor="#858585"
        android:text="@string/n"
        app:layout_constraintEnd_toStartOf="@+id/btnO"
        app:layout_constraintTop_toBottomOf="@+id/btnJ" />

    <Button
        android:id="@+id/btnK"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginEnd="124dp"
        android:layout_marginRight="124dp"
        android:text="@string/k"
        android:textColor="#858585"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnG" />

    <Button
        android:id="@+id/btnM"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/m"
        android:textColor="#858585"
        app:layout_constraintEnd_toStartOf="@+id/btnN"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnI" />

    <Button
        android:id="@+id/btnL"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/l"
        android:textColor="#858585"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toEndOf="@+id/btnK"
        app:layout_constraintTop_toBottomOf="@+id/btnH" />

    <Button
        android:id="@+id/btnH"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:text="@string/h"
        android:textColor="#858585"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toEndOf="@+id/btnG"
        app:layout_constraintTop_toBottomOf="@+id/btnD" />

    <Button
        android:id="@+id/btnF"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="132dp"
        android:layout_marginLeft="132dp"
        android:text="@string/f"
        android:textColor="#858585"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnB" />

    <Button
        android:id="@+id/btnG"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginEnd="124dp"
        android:layout_marginRight="124dp"
        android:text="@string/g"
        android:textColor="#858585"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnC" />

    <Button
        android:id="@+id/btnE"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/e"
        android:textColor="#858585"
        app:layout_constraintBottom_toTopOf="@+id/btnI"
        app:layout_constraintEnd_toStartOf="@+id/btnF"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnA"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnI"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:textColor="#858585"
        android:layout_marginTop="160dp"
        android:text="@string/i"
        app:layout_constraintEnd_toStartOf="@+id/btnJ"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</android.support.constraint.ConstraintLayout>